Add set global data
